Update footer desktop

--- a/index.html
+++ b/index.html
@@ -205,10 +205,29 @@
         <div class="index"><img src="img/finger.png" class="fas fa-angle-double-up btn-animate" alt="Icône Doigt levé"></img></div>
     </button>
     <footer id="footer">
-        <p>CapiCode 🧪 <span id="year"></span></p>
+        <div class="footer__content">
+            <div class="footer__title">
+                <h3>CapiCode 🧪</h3>
+            </div>
+            <div class="footer__contact">
+                <h4>Contact</h4>
+                <p>devcapicode@gmail.com</p>
+            </div>
+            <div class="footer__platform">
+                <h4>Plateformes</h4>
+                <div class="icon">
+                    <a href="https://github.com/CapiCode" target="_blank" rel="noopener">
+                        <img src="img/github-wh.png" alt="Icône Github">
+                    </a>
+                    <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179/" target="_blank" rel="noopener">
+                        <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
+                    </a>
+                </div>
+            </div>
+            <span id="year" class="year"></span>
+        </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script defer src="js/scroll.js"></script>
     <script defer src="js/year.js"></script>
 </body>
