--- a/index.html
+++ b/index.html
@@ -113,17 +113,18 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/chat.JPG" alt="Site de chat en ligne">
+                <img src="img/project/quotidien.JPG" alt="Site de chat en ligne">
             </div>
             <div class="project__content">
-                <h3>Chat</h3>
-                <p class="desc">Conception en cours d'un chat permettant de discuter en ligne avec des utilisateurs via
-                    divers salons.</p>
+                <h3>Quotidien</h3>
+                <p class="desc">Conception en cours d'un tableau de bord proposant diverses fonctionnalités pour suivre et gérer ses activités. <br>Gestion de projets, todo-list, messagerie.
+                </p>
                 <div class="project__box--stack">
                     <p class="highlith-stack">HTML</p>
                     <p class="highlith-stack">CSS</p>
                     <p class="highlith-stack">Javascript</p>
                     <p class="highlith-stack">PHP</p>
+                    <p class="highlith-stack">API</p>
                 </div>
                 <div class="project__box--link">
                     <a href="#project">
@@ -139,9 +140,8 @@
             </div>
             <div class="project__content">
                 <h3>Drôle de recettes</h3>
-                <p class="desc">Conception en cours d'une interface permettant d'élaborer et de stocker des recettes
-                    de cuisines.
-                    Gestion utilisateurs, CRUD.
+                <p class="desc">Conception en cours d'une interface permettant d'élaborer des recettes
+                    de cuisines. <br>Gestion, librairie de recettes.
                 </p>
                 <div class="project__box--stack">
                     <p class="highlith-stack">HTML</p>
