--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <img src="img/project/quotidien.JPG" alt="Site de chat en ligne">
             </div>
             <div class="project__content">
-                <h3>Quotidien</h3>
+                <h3>Dashboard</h3>
                 <p class="desc">Conception en cours d'un tableau de bord proposant diverses fonctionnalités pour suivre et gérer ses activités. <br>Gestion de projets, todo-list, messagerie.
                 </p>
                 <div class="project__box--stack">
