--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mq.css">
-    <title>CapiCode</title>
+    <title>Étudiant, Autodidacte | CapiCode</title>
 </head>
 
 <body>
