--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="CapiCode">
+    <meta property="og:type" content="website">
     <meta name="description" content="CapiCode - Portfolio ">
     <meta property="og:description" content="Actuellement étudiant en formation de Technicien Développeur axé sur le développement web, mobile et la
         gestion de projets.">
-    <meta property="og:title" content="CapiCode - Portfolio">
     <meta property="og:image" content="https://capicode.github.io/img/project/portfolio.png">
+    <meta property="og:title" content="CapiCode - Portfolio">
     <meta property="og:url" content="https://capicode.github.io/">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
@@ -26,10 +27,10 @@
                 <a href="#home" class="fade logo" id="link-home">
                     < CapiCode /></a>
                 <div class="navigation__items">
-                    <a href="#about" class="fadet">A propos</a>
-                    <a href="#skill" class="fadet">Compétences</a>
-                    <a href="#project" class="fadet">Projets</a>
-                    <a href="#footer" class="fadet">Contact</a>
+                    <a href="#about">A propos</a>
+                    <a href="#skill">Compétences</a>
+                    <a href="#project">Projets</a>
+                    <a href="#footer">Contact</a>
                 </div>
             </div>
         </nav>
