--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <img src="img/project/quotidien.JPG" alt="Site de chat en ligne">
             </div>
             <div class="project__content">
-                <h3>Dashboard</h3>
-                <p class="desc">Conception en cours d'un tableau de bord proposant diverses fonctionnalités pour suivre et gérer ses activités. <br>Gestion de projets, todo-list, messagerie.
+                <h3>Driv +</h3>
+                <p class="desc">Conception en cours d'un tableau de bord permettant de suivre et gérer ses activités. <br>Gestion de projets, todo-list, messagerie.
                 </p>
                 <div class="project__box--stack">
                     <p class="highlith-stack">HTML</p>
@@ -128,7 +128,7 @@
                     <p class="highlith-stack">API</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="#project">
+                    <a href="https://dashboard.capicode.fr">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
