--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/quotidien.JPG" alt="Site de chat en ligne">
+                <img src="img/project/driv+.JPG" alt="Site de chat en ligne">
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
@@ -128,7 +128,7 @@
                     <p class="highlith-stack">API</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://dashboard.capicode.fr">
+                    <a href="https://driv.capicode.fr">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
