Update link image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img/project/driv+.JPG" alt="Site de chat en ligne">
+                <a href="https://driv.capicode.fr"><img src="img/project/driv+.JPG" alt="Site de chat en ligne"></a>
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
