--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
                     des morceaux de codes par curiosité,
                     aujourd'hui je réalise avec passion de petites créations pour donner
                     vie à mes idées.
-                    Actuellement, je suis bénévole pour une agence de marketing digitale en tant qu'intégrateur web depuis un an.
-                    Sur mon temps libre, je développe mes projets web avec Javascript et PHP, la plupart sont en cours d'élaboration soyez donc patient !
+                    Actuellement, je suis en formation de Technicien
+                    Développeur axé sur le développement web, mobile et la
+                    gestion de projets.
+                    Sur mon temps libre, je développe mes projets web avec Javascript et PHP, la plupart sont en cours d'élaboration.
                     Je travaille principalement sur des interfaces pour m'améliorer sur des conceptions modernes, accessibles et simples d'utilisations.
                     Passionné par le web, j'aime régulièrement apprendre de nouvelles choses, de façon à rester en
                     veille permanente.
@@ -76,7 +78,7 @@
                 </div>
             </div>
             <div class="about__btn">
-                <a href="cv/GIOVANNI_CHARLES-EDOUARD_CV_I.pdf" target="_blank">Voir mon CV ⇢</a>
+                <a href="cv/GIOVANNI_CHARLES-EDOUARD_CV.pdf" target="_blank">Voir mon CV ⇢</a>
                 <a href="#project" id="see-project">Consultez mes projets ⇢</a>
             </div>
 
