--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mq.css">
-    <title>Étudiant, Autodidacte | CapiCode</title>
+    <title>Étudiant, Autodidacte</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <nav>
             <div class="navigation">
                 <a href="#home" class="fade logo" id="link-home">
-                    < CapiCode /></a>
+                    < Portfolio /></a>
                 <div class="navigation__items">
                     <a href="#about">A propos</a>
                     <a href="#skill">Compétences</a>
@@ -213,12 +213,12 @@
     <footer id="footer">
         <div class="footer__content">
             <div class="footer__title">
-                <h3>CapiCode 🧪  <span id="year" class="year"></span></h3>
+                <h3>Portfolio 🧪  <span id="year" class="year"></span></h3>
             </div>
             <div class="footer__social">
                 <div class="footer__contact">
                     <h4>Contact</h4>
-                    <p>devcapicode@gmail.com</p>
+                    <p>devflausk@gmail.com</p>
                 </div>
                 <div class="footer__platform">
                     <h4>Plateformes</h4>
