--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="#project">
+                    <a href="https://funnyrecipes.capicode.fr/">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
