--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
+                <a href="https://funnyrecipes.capicode.fr/"></a>
                 <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
             </div>
             <div class="project__content">
@@ -152,7 +153,7 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://funnyrecipes.capicode.fr/">
+                    <a href="#project">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
