--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                     Actuellement, je suis en formation de Technicien
                     Développeur axé sur le développement web, mobile et la
                     gestion de projets.
-                    Sur mon temps libre, je développe mes projets web avec Javascript et PHP, la plupart sont en cours d'élaboration.
-                    Je travaille principalement sur des interfaces pour m'améliorer sur des conceptions modernes, accessibles et simples d'utilisations.
+                    Sur mon temps libre, je développe mes projets web avec Javascript et PHP, la plupart sont en cours
+                    d'élaboration.
+                    Je travaille principalement sur des interfaces pour m'améliorer sur des conceptions modernes,
+                    accessibles et simples d'utilisations.
                     Passionné par le web, j'aime régulièrement apprendre de nouvelles choses, de façon à rester en
                     veille permanente.
 
@@ -119,7 +121,8 @@
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
-                <p class="desc">Conception en cours d'un tableau de bord permettant de suivre et gérer ses activités. <br>Gestion de projets, todo-list, messagerie.
+                <p class="desc">Conception en cours d'un tableau de bord permettant de suivre et gérer ses activités.
+                    <br>Gestion de projets, todo-list, messagerie.
                 </p>
                 <div class="project__box--stack">
                     <p class="highlith-stack">HTML</p>
@@ -138,8 +141,9 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="https://funnyrecipes.capicode.fr/"></a>
-                <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
+                <a href="https://funnyrecipes.capicode.fr/">
+                    <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
+                </a>
             </div>
             <div class="project__content">
                 <h3>Drôle de recettes</h3>
@@ -214,7 +218,7 @@
     <footer id="footer">
         <div class="footer__content">
             <div class="footer__title">
-                <h3>Portfolio 🧪  <span id="year" class="year"></span></h3>
+                <h3>Portfolio 🧪 <span id="year" class="year"></span></h3>
             </div>
             <div class="footer__social">
                 <div class="footer__contact">
@@ -235,7 +239,7 @@
                 </div>
             </div>
 
-            
+
         </div>
     </footer>
 
