--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank"
+                    <a href="https://www.linkedin.com/in/giovanni-charles-edouard/" target="_blank"
                         class="logo-animated" rel="noopener">
                         <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                     </a>
@@ -117,7 +117,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="https://driv.capicode.fr"><img src="img/project/driv+.JPG" alt="Site de chat en ligne"></a>
+                <a href="https://driv.capicode.fr" target="_blank"><img src="img/project/driv+.JPG" alt="Site de chat en ligne"></a>
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
@@ -132,7 +132,7 @@
                     <p class="highlith-stack">API</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://driv.capicode.fr">
+                    <a href="https://driv.capicode.fr" target="_blank">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
@@ -141,7 +141,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="https://funnyrecipes.capicode.fr/">
+                <a href="https://funnyrecipes.capicode.fr/" target="_blank">
                     <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
                 </a>
             </div>
@@ -231,7 +231,7 @@
                         <a href="https://github.com/CapiCode" target="_blank" rel="noopener">
                             <img src="img/github-wh.png" alt="Icône Github">
                         </a>
-                        <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179/" target="_blank"
+                        <a href="https://www.linkedin.com/in/giovanni-charles-edouard/" target="_blank"
                             rel="noopener">
                             <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                         </a>
