--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <p class="highlith-stack">API</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://driv.capicode.fr" target="_blank">
+                    <a href="https://driv.iamflk.com" target="_blank">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours ⇢</span>
                     </a>
@@ -141,7 +141,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="https://funnyrecipes.capicode.fr/" target="_blank">
+                <a href="https://ocuisine.iamflk.com/" target="_blank">
                     <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
                 </a>
             </div>
