--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="https://ocuisine.iamflk.com/" target="_blank">
+                <a href="" target="_blank">
                     <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
                 </a>
             </div>
