--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="about__btn">
-                <a href="cv/GIOVANNI_CHARLES-EDOUARD_CV.pdf" target="_blank">Voir mon CV ⇢</a>
+                <a href="cv/II_GIOVANNI_CHARLES-EDOUARD_CV.pdf" target="_blank">Voir mon CV ⇢</a>
                 <a href="#project" id="see-project">Consultez mes projets ⇢</a>
             </div>
 
@@ -134,14 +134,14 @@
                 <div class="project__box--link">
                     <a href="https://driv.iamflk.com" target="_blank">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
-                        <span>En cours ⇢</span>
+                        <span>En cours de développement</span>
                     </a>
                 </div>
             </div>
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="" target="_blank">
+                <a href="https://ocuisine.iamflk.com/" target="_blank">
                     <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
                 </a>
             </div>
@@ -157,9 +157,9 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="#project">
+                    <a href="https://ocuisine.iamflk.com/" target="_blank">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
-                        <span>En cours ⇢</span>
+                        <span>En cours de développement</span>
                     </a>
                 </div>
             </div>
