--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </a>
             </div>
             <div class="project__content">
-                <h3>Drôle de recettes</h3>
+                <h3>O Cuisine</h3>
                 <p class="desc">Conception en cours d'une interface permettant d'élaborer des recettes
                     de cuisines. <br>Gestion, librairie de recettes.
                 </p>
