--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="about__box-social">
                 <div>
-                    <a href="https://github.com/CapiCode" target="_blank" class="logo-animated" rel="noopener">
+                    <a href="https://github.com/iamflk" target="_blank" class="logo-animated" rel="noopener">
                         <img src="img/github-wh.png" alt="Icône Github">
                     </a>
                 </div>
