--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                     </a>
                 </div>
                 <div>
-                    <a href="https://www.linkedin.com/in/giovanni-charles-edouard/" target="_blank"
+                    <a href="" target="_blank"
                         class="logo-animated" rel="noopener">
                         <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                     </a>
                 </div>
             </div>
             <div class="about__btn">
-                <a href="cv/GIOVANNI_CHARLES-EDOUARD_CV.pdf" target="_blank">Voir mon CV ⇢</a>
+                <a href="" target="_blank">Voir mon CV ⇢</a>
                 <a href="#project" id="see-project">Consultez mes projets ⇢</a>
             </div>
 
@@ -203,7 +203,7 @@
                     <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter !</p>
                 </div>
                 <div class="contact-button">
-                    <a href="mailto:devcapicode@gmail.com" title="Email" target="_blank">Contacter ⇢</a>
+                    <a href="mailto:" title="Email" target="_blank">Contacter ⇢</a>
                 </div>
             </div>
         </div>
