--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
                 <div class="footer__platform">
                     <h4>Plateformes</h4>
                     <div class="icon">
-                        <a href="https://github.com/CapiCode" target="_blank" rel="noopener">
+                        <a href="https://github.com/iamflk" target="_blank" rel="noopener">
                             <img src="img/github-wh.png" alt="Icône Github">
                         </a>
-                        <a href="https://www.linkedin.com/in/giovanni-charles-edouard/" target="_blank"
+                        <a href="" target="_blank"
                             rel="noopener">
                             <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                         </a>
