--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="CapiCode">
+    <meta name="author" content="Flausk">
     <meta property="og:type" content="website">
-    <meta name="description" content="CapiCode - Portfolio ">
+    <meta name="description" content="Flausk - Portfolio ">
     <meta property="og:description" content="Actuellement étudiant en formation de Technicien Développeur axé sur le développement web, mobile et la
         gestion de projets.">
-    <meta property="og:image" content="https://capicode.github.io/img/project/portfolio.png">
-    <meta property="og:title" content="CapiCode - Portfolio">
+    <meta property="og:image" content="">
+    <meta property="og:title" content="Flausl - Portfolio">
     <meta property="og:url" content="https://capicode.github.io/">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
