--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Actuellement, je suis en formation de Technicien
                     Développeur axé sur le développement web, mobile et la
                     gestion de projets.
-                    Sur mon temps libre, je développe mes projets web avec Javascript et PHP, la plupart sont en cours
+                    Sur mon temps libre, je développe mes projets web avec Javascript, la plupart sont en cours
                     d'élaboration.
                     Je travaille principalement sur des interfaces pour m'améliorer sur des conceptions modernes,
                     accessibles et simples d'utilisations.
