--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="https://driv.iamflk.com" target="_blank"><img src="img/project/driv+.JPG" alt="Site de chat en ligne"></a>
+                <a href="" target="_blank"><img src="img/project/driv+.JPG" alt="Site de chat en ligne"></a>
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
