--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="" target="_blank"><img src="img/project/driv+.JPG" alt="Site de chat en ligne"></a>
+                <a href="" target="_blank"><img src="img/project/driv+.JPG" alt="Tableau de bord"></a>
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
@@ -141,7 +141,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="/" target="_blank">
+                <a href="" target="_blank">
                     <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
                 </a>
             </div>
@@ -157,7 +157,7 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://ocuisine.iamflk.com/" target="_blank">
+                    <a href="" target="_blank">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours de développement</span>
                     </a>
@@ -167,7 +167,7 @@
 
         <div class="project__portfolio">
             <div class="project__illustration">
-                <img src="img//project/portfolio.png" alt="Site Personnel">
+                <img src="img/project/portfolio.png" alt="Site Personnel">
             </div>
             <div class="project__content">
                 <h3>Portfolio</h3>
@@ -182,7 +182,7 @@
                     <p class="highlith-stack">Javascript</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://github.com/CapiCode/capicode.github.io" target="_blank">
+                    <a href="https://iamflk.github.io/" target="_blank">
                         <img src="img/project/source-wh.png" class="icon-merge" alt="Source">
                         <span>Voir la Source ⇢</span>
                     </a>
