--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
             </div>
             <div class="about__box-social">
                 <div>
-                    <a href="https://github.com/iamflk" target="_blank" class="logo-animated" rel="noopener">
+                    <a href="https://github.com/iamflk" class="logo-animated" rel="noopener">
                         <img src="img/github-wh.png" alt="Icône Github">
                     </a>
                 </div>
                 <div>
-                    <a href="" target="_blank"
+                    <a href="#"
                         class="logo-animated" rel="noopener">
                         <img src="img/linkedin-wh.png" alt="Icône LinkedIn">
                     </a>
                 </div>
             </div>
             <div class="about__btn">
-                <a href="" target="_blank">Voir mon CV ⇢</a>
+                <a href="#">Voir mon CV ⇢</a>
                 <a href="#project" id="see-project">Consultez mes projets ⇢</a>
             </div>
 
@@ -117,7 +117,7 @@
     <section class="project" id="project">
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="" target="_blank"><img src="img/project/driv+.JPG" alt="Tableau de bord"></a>
+                <a href="#"><img src="img/project/driv+.JPG" alt="Tableau de bord"></a>
             </div>
             <div class="project__content">
                 <h3>Driv +</h3>
@@ -132,7 +132,7 @@
                     <p class="highlith-stack">API</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="" target="_blank">
+                    <a href="#">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours de développement</span>
                     </a>
@@ -141,7 +141,7 @@
         </div>
         <div class="project__portfolio">
             <div class="project__illustration">
-                <a href="" target="_blank">
+                <a href="#">
                     <img src="img/project/drôle-de-recette.PNG" alt="Site de recette de cuisine">
                 </a>
             </div>
@@ -157,7 +157,7 @@
                     <p class="highlith-stack">PHP</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="" target="_blank">
+                    <a href="#">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
                         <span>En cours de développement</span>
                     </a>
@@ -182,7 +182,7 @@
                     <p class="highlith-stack">Javascript</p>
                 </div>
                 <div class="project__box--link">
-                    <a href="https://iamflk.github.io/" target="_blank">
+                    <a href="https://iamflk.github.io/">
                         <img src="img/project/source-wh.png" class="icon-merge" alt="Source">
                         <span>Voir la Source ⇢</span>
                     </a>
