Modify meta title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Actuellement étudiant en formation de Technicien Développeur axé sur le développement web, mobile et la
         gestion de projets.">
     <meta property="og:image" content="">
-    <meta property="og:title" content="Flausl - Portfolio">
+    <meta property="og:title" content="Flausk - Portfolio">
     <meta property="og:url" content="https://capicode.github.io/">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
