--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
                     des morceaux de codes par curiosité,
                     aujourd'hui je réalise avec passion de petites créations pour donner
                     vie à mes idées.
-                    Actuellement, je suis en formation de Technicien
-                    Développeur axé sur le développement web, mobile et la
-                    gestion de projets.
+                    Actuellement, je suis en formation de Technicien Assistance Informatique axé sur la mise en service d'équipements numériques, l'intervention d'éléments sur une infrastructure et l'assistance ainsi que le dépannage des utilisateurs.
                     Sur mon temps libre, je développe mes projets web avec Javascript, la plupart sont en cours
                     d'élaboration.
                     Je travaille principalement sur des interfaces pour m'améliorer sur des conceptions modernes,
