--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="about__btn">
-                <a href="#">Voir mon CV ⇢</a>
+                <a href="/img/CV_DEV_GIOVANNI_CHARLES-EDOUARD.pdf">Voir mon CV ⇢</a>
                 <a href="#project" id="see-project">Consultez mes projets ⇢</a>
             </div>
 
@@ -165,7 +165,9 @@
 
         <div class="project__portfolio">
             <div class="project__illustration">
+                <a href="#">
                 <img src="img/project/portfolio.png" alt="Site Personnel">
+                </a>
             </div>
             <div class="project__content">
                 <h3>Portfolio</h3>
