Change link project driv ->

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="project__box--link">
                     <a href="https://driv.iamflausk.com" target="blank">
                         <img src="img/project/development-wh.png" class="icon-merge" alt="En cours de développement">
-                        <span>Voir le projet</span>
+                        <span>Voir le projet ⇢</span>
                     </a>
                 </div>
             </div>
