--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <div class="hero-text animated" id="hero-text">
             <h1><span>Salut ! Je suis <span class="hilight-title">Giovanni</span></span>.<span class="intro-end">Un
-                    étudiant autodidacte !<img src="img/hand.png" class="viber" alt="Icône de main"></span></h1>
+                    étudiant autodidacte<img src="img/hand.png" class="viber" alt="Icône de main"></span></h1>
         </div>
         <div class="hero-icon appearingArrow">
             <a href="#about" id="arrow-about"><span></span></a>
