--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <h3>Portfolio</h3>
                 <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
                     valeur mes
-                    compétences ainsi que l'étendu de mes réalisations.
+                    compétences<br/> ainsi que l'étendu de mes réalisations.
                     Celui-ci sera en constante évolution.
                 </p>
                 <div class="project__box--stack">
