Add language python at section skill__content--stack

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     des morceaux de codes par curiosité,
                     aujourd'hui je réalise avec passion de petites créations pour donner
                     vie à mes idées.
-                    Actuellement, je suis en formation de Technicien Assistance Informatique axé sur la mise en service d'équipements numériques, l'intervention d'éléments sur une infrastructure et l'assistance ainsi que le dépannage des utilisateurs.
-                    Sur mon temps libre, je développe mes projets web avec Javascript, la plupart sont en cours
+                    Actuellement, je suis Technicien Informatique axé sur la mise en service d'équipements numériques, l'intervention d'éléments sur infrastructure et dépannage, assistance des utilisateurs.
+                    Sur mon temps libre, Développeur Web, je développe mes projets web avec Javascript et Python, la plupart sont en cours
                     d'élaboration.
                     Je travaille principalement sur des interfaces pour m'améliorer sur des conceptions modernes,
                     accessibles et simples d'utilisations.
@@ -97,10 +97,11 @@
                     <p class="skill__content--stack">JS</p>
                     <p class="skill__content--stack">PHP</p>
                     <p class="skill__content--stack">SQL</p>
-                    <p class="skill__content--stack">Bulma</p>
+                    <p class="skill__content--stack">PYTHON</p>
+                    <p class="skill__content--stack">BULMA</p>
                     <p class="skill__content--stack">Git</p>
                     <p class="skill__content--stack">Github</p>
-                    <p class="skill__content--stack">Adobe XD</p>
+                    <p class="skill__content--stack">figma</p>
                     <p class="skill__content--stack">Xamarin</p>
                     <p class="skill__content--stack">SCSS</p>
                     <p class="skill__content--stack">Wordpress</p>
